--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,7 @@
     "[markdown]": {
         "editor.trimAutoWhitespace": false,
         "files.trimTrailingWhitespace": false
-    }
+    },
+    "editor.formatOnSave": false,
+    "editor.formatOnPaste": false
 }
